updating logic to persist incidence catalogs